--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ params:
             default: Licensed under CC BY-NC-SA 4.0
 
     comments:
-        enabled: true
+        enabled: false
         provider: disqus
 
         disqusjs:
@@ -204,15 +204,15 @@ menu:
     social:
         - identifier: github
           name: GitHub
-          url: https://github.com/CaiJimmy/hugo-theme-stack
+          url: https://github.com/mateisilviu
           params:
               icon: brand-github
 
-        - identifier: twitter
-          name: Twitter
-          url: https://twitter.com
+        - identifier: linkedin
+          name: Linkedin
+          url: https://www.linkedin.com/in/mateisilviu/
           params:
-              icon: brand-twitter
+              icon: brand-linkedin
 
 related:
     includeNewer: true
